--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-slide-animation-router": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.15.5",
